add minimal travis CI